# ttlib

./: CMakeLists.txt  README.md  b.sh  ttlib.sln
common/: TTCircularBuffer.h  TTCodeQueue.h  TTCommonError.h  TTCommonMutex.h  TTCommonThread.cpp  TTCommonThread.h
include/: TTCircularBuffer.h  TTCommonMessageQueue.h  TTCommonThread.h  TTDef.h  TTGlobal.h  TTNocopyable.h
net/: Socket.h  TcpSocket.cpp  TcpSocket.h
src/: CMakeLists.txt  TTCircularBuffer.cpp  TTCommonThread.cpp
test/: CMakeLists.txt  Queue.cpp  thread.cpp
ttlib/: ttlib.vcxproj  ttlib.vcxproj.filters
