CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(TTLIB)
SET(PROJECT_PATH .)

INCLUDE_DIRECTORIES(./include 
./common
./network
)

FILE(GLOB TT_SOURCE *.h *.cpp *.cc)
FILE(GLOB TT_COMMON common/*.h common/*.cpp common/*.cc)
FILE(GLOB TT_NET net/*.h net/*.cpp net/*.cc)

SOURCE_GROUP("" FILES ${TT_SOURCE})
SOURCE_GROUP("common" FILES ${TT_COMMON})
SOURCE_GROUP("net" FILES ${TT_NET})

ADD_LIBRARY(tt SHARED 
${TT_SOURCE}
${TT_COMMON}
${TT_NET}
)

ADD_LIBRARY(tt_static STATIC
${TT_SOURCE}
${TT_COMMON}
${TT_NET}
)

TARGET_LINK_LIBRARIES(tt_static pthread)
SET_TARGET_PROPERTIES(tt_static PROPERTIES OUTPUT_NAME "tt")
GET_TARGET_PROPERTY(OUTPUT_VALUE tt_static OUTPUT_NAME)

ADD_SUBDIRECTORY(test bin)
