CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(TTLIB)
SET(LIBSRC_LIST TTCircularBuffer.cpp TTCommonThread.cpp)
INCLUDE_DIRECTORIES(/home/gaof/test/ttlib/include)
ADD_LIBRARY(tt SHARED ${LIBSRC_LIST})
ADD_LIBRARY(tt_static STATIC ${LIBSRC_LIST})
TARGET_LINK_LIBRARIES(tt_static pthread)
SET_TARGET_PROPERTIES(tt_static PROPERTIES OUTPUT_NAME "tt")
GET_TARGET_PROPERTY(OUTPUT_VALUE tt_static OUTPUT_NAME)
MESSAGE(STATUS "This is the tt_static OUTPUT_VALUE:"${OUTPUT_VALUE})
