CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(LIBSRC_LIST Queue.cpp)
SET(THREAD_LIBSRC_LIST thread.cpp)
INCLUDE_DIRECTORIES(/home/gaof/test/ttlib/include)
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb ")
ADD_EXECUTABLE(queue ${LIBSRC_LIST})
ADD_EXECUTABLE(thread ${THREAD_LIBSRC_LIST})
LINK_DIRECTORIES(/home/gaof/test/ttlib/build/lib)
TARGET_LINK_LIBRARIES(thread tt pthread) 
